# a-view

./: .gitignore  README.md  main.js  package-lock.json  package.json
.github/workflows/: release.yml
mockup/: opencode-ops-dashboard.html
public/: app.js  i18n.js  index.html  styles.css
server/: dashboard-service.js  opencode-adapter.js  server.js  stall-detector.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns  placeholder.json
src-tauri/src/: app_state.rs  commands.rs  dashboard_service.rs  lib.rs  main.rs  opencode_adapter.rs  port_scanner.rs  process_killer.rs  sleep_manager.rs  stall_detector.rs  types.rs
test/: stall-detector.test.js
